modified:   submissions/index.htm

--- a/submissions/index.htm
+++ b/submissions/index.htm
@@ -84,7 +84,7 @@
 <h2 id="georef">Context and Geo-Location</h2>
 
 <p>The citySchema project has developed a tiling and coordinate referencing scheme that bridges between design tools and GIS.  The BPDA uses this coordinate frame for exporting its detailed base models that will be convenient for situating your model.
-The <a href="./tile_scheme/index.htm#coordinates" target = "outboard">Tile Grid and Coordinate System</a> page provides the tile referencing grid in many popular 3D formats.   
+The <a href="../tile_scheme/index.htm#coordinates" target = "outboard">Tile Grid and Coordinate System</a> page provides the tile referencing grid in many popular 3D formats.   
 
 <p>Watch the <a href="https://www.youtube.com/watch?v=IeyYV5W5u94&t=86s" target="outboard">video demonstration of using the metro3D tile grid</a> to coordinate exchange of models between the BPDA's model collection and your project models.  This technique allows you to keep whatever local site origin you might be using.  
 
