modified:   submissions/index.htm

--- a/submissions/index.htm
+++ b/submissions/index.htm
@@ -94,7 +94,7 @@ The <a href="../tile_scheme/index.htm#coordinates" target = "outboard">Tile Grid
   <h3>Fallback</h3>
   <figure class="right">
     <img src="images/submission_on_plan.png">
-    <figcaption>Model Level of Detail</figcaption>
+    <figcaption>Building Model with Groundplan Reference</figcaption>
   </figure>
 <p>If it is not possible to export your model using the metro-3D coordinate system, please include a ground-plan reference image as shown in the illustration above. The groundplan should show enough of the edge of pavement in the context area to verify that the model is registered correctly.  
 
