modified:   submissions/index.htm

--- a/submissions/index.htm
+++ b/submissions/index.htm
@@ -51,7 +51,7 @@
 <ul>
 <li>Our model includes a detailed terrain model.  If ground-level details such as entryways are at different elevations, these must be represented correctly.
 <li>You are welcome to represent the underground portions of your structure.  But this is not required.  
-<li>To eliminate floating corners whenusing terrainsettings of diffent quality, it is helpful to extend your model a few feet below the ground.  
+<li>To eliminate floating corners when using terrain settings of different quality, it is helpful to extend your model a few feet below the ground.  
 <li>If a building is attached to pre-existing structures it is helpful to represent these as discretely grouped geometry. 
 <li>If a project has multiple buildings or construction / permitting phases it is best if these are separated into individual .OBJ files.
 
@@ -96,7 +96,7 @@ The <a href="../tile_scheme/index.htm#coordinates" target = "outboard">Tile Grid
     <img src="images/submission_on_plan.png">
     <figcaption>Building Model with Groundplan Reference</figcaption>
   </figure>
-<p>If it is not possible to export your model using the metro-3D coordinate system, please include a ground-plan reference image as shown in the illustration above. The groundplan should show enough of the edge of pavement in the context area to verify that the model is registered correctly.  
+<p>If it is not possible to export your model using the metro-3D coordinate system, please include a ground-plan reference image as shown in the illustration above. The groundplan should show enough of the edge of pavement in the context area to verify that the model is registered correctly.  This groundplan canbe included inthe OBJ file as a single face with the image mapped as a texture. 
 
 <h2>Optional Source Material</h2>
 <p>Our archival system is capable of storing source material, including the plans and elevations and other information that may be part of the project proposal.  We can also keep working models -- for example SketchUp or .3DS files.  We are SketchUp Users, so if you have a SketchUp file of your model this may be helpful in case we need to do any trouble-shooting.
