modified:   filesystem/index.htm 	modified:   resources/cityschema_includes.js

--- a/filesystem/index.htm
+++ b/filesystem/index.htm
@@ -104,7 +104,7 @@ Because you may have more than one person or agency sharing development work, it
       <p>It is helpful to think of each of these workflows as several patterns in common.  
 
 
-      <h3>Workspace Patterns</h3>
+      <h3 id="workspace">Workspace Patterns</h3>
       <figure class="right">
       <img src="images/generic_workflow.jpg" style="height: 180px; width: auto;">
      <figcaption>Folders in a workspace</figcaption>
