modified:   citytiler/index.htm 	modified:   data_dictionary/index.htm 	new file:   docutree/images/tall.jpg 	new file:   docutree/images/wide.jpg 	new file:   docutree/index.htm 	modified:   filesystem/index.htm 	modified:   home/index.htm 	modified:   mmgt_compile/index.htm 	modified:   mmgt_edit/index.htm 	modified:   mmgt_import/index.htm 	modified:   mmgt_init/index.htm 	modified:   mmgt_layers/index.htm 	modified:   mmgt_orig/index.htm 	modified:   mmgt_project/index.htm 	modified:   mmgt_stage/index.htm 	modified:   mmgt_tools/index.htm 	modified:   model_buyers_guide/index.htm 	modified:   model_collection/index.htm 	modified:   model_collection/index.htmx 	modified:   oais/index.htm 	modified:   repocat/index.htm 	modified:   resources/cityschema_includes.js 	deleted:    resources/cityschema_old.css 	new file:   resources/docutree.css 	new file:   resources/docutree.js 	new file:   resources/docutree_includes.js 	modified:   stewardship/index.htm 	modified:   submissions/index.htm 	modified:   submissions/index_bk.htm 	modified:   template/index.htm 	modified:   template/indexbk.htm 	modified:   tile_scheme/index.htm 	modified:   whatsnew/index.htm

--- a/data_dictionary/index.htm
+++ b/data_dictionary/index.htm
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="../resources/images/favicon.png" type="image/x-icon">
     <script src="../resources/jquery/jquery-3.6.0.min.js"></script>
-    <link href="../resources/cityschema.css" rel="stylesheet"> 
+    <link href="../resources/docutree.css" rel="stylesheet"> 
     <script src="../resources/slideshow_pbc.js"></script>
     <link href="../resources/slideshow_pbc.css" rel="stylesheet"> 
     
@@ -22,7 +22,7 @@
           When you add a new page or internalachcor, you should update the index in cityschema_includes.js.-->
     <script src="../resources/cityschema_includes.js"></script>
     <!-- THis has to come after the cityschema_includes file-->
-    <script src="../resources/cityschema.js"></script>
+    <script src="../resources/docutree.js"></script>
     </head>
     <body>
       <div id="grid-container">
