--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="../resources/images/favicon.png" type="image/x-icon">
     <script src="../resources/jquery/jquery-3.6.0.min.js"></script>
-    <link href="../resources/cityschema.css" rel="stylesheet"> 
+    <link href="../resources/docutree.css" rel="stylesheet"> 
     <script src="../resources/slideshow_pbc.js"></script>
     <link href="../resources/slideshow_pbc.css" rel="stylesheet"> 
     
@@ -22,7 +22,7 @@
           When you add a new page or internalachcor, you should update the index in cityschema_includes.js.-->
     <script src="../resources/cityschema_includes.js"></script>
     <!-- THis has to come after the cityschema_includes file-->
-    <script src="../resources/cityschema.js"></script>
+    <script src="../resources/docutree.js"></script>
     </head>
     <body>
       <div id="grid-container">
@@ -39,7 +39,27 @@
   <h3 class="section_title"></h3>  <!-- Optional: would be the tile of the intro chapter.  -->
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
   <ul>
-  <li id="coordinationvid"><b>January 12, 2022: Intro video posted on YouTube.</b>
+  <li><b>June 15, 2022: Web-Scene Publishing Tasks Provide Model Download Link in ArcGIS On-Line Pop-Ups
+    </b><br>
+    We have improved our layer management capability with in the Model Management workspace to automate the production of ArcGIS On-Line Web feature services with streamlined pop-ups -- that provide for model downloads!  <a href="https://boston.maps.arcgis.com/home/webscene/viewer.html?webscene=80de5aea1a3348bfae7ae4c91659a75e" target="outboard"> Visit the demo here.</a>
+  <li><b>May 20, 2022: CityTiler Repository Posted</b><br>
+      <a href="https://github.com/CitySchema/cityschema-citytiler" target="outboard">The CitySchema-CityTiler</a> project includes all of the tools for:
+      <ul>
+        <li>Creating a tiling scheme that facilitates exchange of georeferenced models between GIS and design-oriented 3d modeling tools.  
+        <li>Creating tiled terrain models that integrate very detailed triangulated models witin the boundaries of the city's photogrammetry.  Filling in areas outside the city limit with details from the MassGIS state-wide DTM.
+        <li>Creating tiled groundplan images that drape precisely onto the tiled terrain models 
+      </ul>
+
+  <li><b>May 16, 2022: Presentation Slides from the Northeast Arc User Conference</b><br>
+    <a href="http://www.pbcgis/presentations/pbcgis_nearc_20220516.pdf" target="outboard">This slide deck</a> discusses some of new ideas about building a metropolitan community dedicated to city model stewardship.
+
+  <li><b>May 5, 2022: Docutree Project Improves Modular Documentation</b><br>
+    The simple but effective html documentation framework for citySchema.org has been forked to its own gitHub project -- <a href="www.github.com/pbcgis/docutree" target="outboard">www.github.com/pbcgis/docutree</a>.  The idea here is to make it easier for users to contribute or capture documentation collections or individual pages that relate to their projects. 
+    
+
+  
+  
+    <li id="coordinationvid"><b>January 12, 2022: Intro video posted on YouTube.</b>
   <p>The first video has been posted to the citySchema.org YouTube channel.  <a href="https://youtu.be/IeyYV5W5u94" target="sidecar">Take and Give: Coordinating City Model Activity</a> provides an intro to the citySchema architecture and a technical overview of the technique for sharing editable models with any commercial modeling tool while retaining precise 3D georeferencing.
   </p>
   <li id="2022funding"><b>January 1, 2022: A New Year of Funding for citySchema.org.</b>
