modified:   whatsnew/index.htm

--- a/whatsnew/index.htm
+++ b/whatsnew/index.htm
@@ -40,9 +40,9 @@
   <h1 class="title">What's New: Recent Updates and New Resources </h1>
   <ul>
   <li><b>June 15, 2022: Web-Scene Publishing Tasks Provide Model Download Link in ArcGIS On-Line Pop-Ups
-    </b><br>
+    </b><p>
     We have improved our layer management capability with in the Model Management workspace to automate the production of ArcGIS On-Line Web feature services with streamlined pop-ups -- that provide for model downloads!  <a href="https://boston.maps.arcgis.com/home/webscene/viewer.html?webscene=80de5aea1a3348bfae7ae4c91659a75e" target="outboard"> Visit the demo here.</a>
-  <li><b>May 20, 2022: CityTiler Repository Posted</b><br>
+  <li><b>May 20, 2022: CityTiler Repository Posted</b><p>
       <a href="https://github.com/CitySchema/cityschema-citytiler" target="outboard">The CitySchema-CityTiler</a> project includes all of the tools for:
       <ul>
         <li>Creating a tiling scheme that facilitates exchange of georeferenced models between GIS and design-oriented 3d modeling tools.  
@@ -50,14 +50,11 @@
         <li>Creating tiled groundplan images that drape precisely onto the tiled terrain models 
       </ul>
 
-  <li><b>May 16, 2022: Presentation Slides from the Northeast Arc User Conference</b><br>
+  <li><b>May 16, 2022: Presentation Slides from the Northeast Arc User Conference</b><p>
     <a href="http://www.pbcgis/presentations/pbcgis_nearc_20220516.pdf" target="outboard">This slide deck</a> discusses some of new ideas about building a metropolitan community dedicated to city model stewardship.
 
-  <li><b>May 5, 2022: Docutree Project Improves Modular Documentation</b><br>
-    The simple but effective html documentation framework for citySchema.org has been forked to its own gitHub project -- <a href="www.github.com/pbcgis/docutree" target="outboard">www.github.com/pbcgis/docutree</a>.  The idea here is to make it easier for users to contribute or capture documentation collections or individual pages that relate to their projects. 
-    
-
-  
+  <li><b>May 5, 2022: Docutree Project Improves Modular Documentation</b><p>
+    The simple but effective html documentation framework for citySchema.org has been forked to its own gitHub project -- <a href="http://www.github.com/pbcgis/docutree" target="outboard">www.github.com/pbcgis/docutree</a>.  The idea here is to make it easier for users to contribute or capture documentation collections or individual pages that relate to their projects. 
   
     <li id="coordinationvid"><b>January 12, 2022: Intro video posted on YouTube.</b>
   <p>The first video has been posted to the citySchema.org YouTube channel.  <a href="https://youtu.be/IeyYV5W5u94" target="sidecar">Take and Give: Coordinating City Model Activity</a> provides an intro to the citySchema architecture and a technical overview of the technique for sharing editable models with any commercial modeling tool while retaining precise 3D georeferencing.
